--- a/CLUBS.html
+++ b/CLUBS.html
@@ -199,23 +199,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FTECHNICAL-BOARD%2FTechnicalBoard2022-23.pdf?alt=media&token=2cd6a884-c25e-4b86-bce2-4517b1766c72" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FTECHNICAL-BOARD%2FTechnicalBoard2021-22.pdf?alt=media&token=048a26da-55bf-4efe-b76b-ca18fff1edba" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FTECHNICAL-BOARD%2FTechnicalBoard2020-21.pdf?alt=media&token=c247b4e8-fbc3-4271-92ab-db6dd49e37ed" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FTECHNICAL-BOARD%2FTechnicalBoard2019-20.pdf?alt=media&token=8f44216f-22d0-4b0c-be56-66e2d998c87a" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FTECHNICAL-BOARD%2FTechnicalBoard2018-19.pdf?alt=media&token=70a108f6-8648-4b12-9b60-1b9eeb2ddd77" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -267,23 +267,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FSPORTS-CLUB%2FSportsClub2022-23.pdf?alt=media&token=2ea7b8e1-ee29-4292-982d-efb4eaf4dbe7" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FSPORTS-CLUB%2FSportsClub2021-22.pdf?alt=media&token=cb4ce3ed-9824-4639-828a-e5c6ca6d66f6" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FSPORTS-CLUB%2FSportsClub2020-21.pdf?alt=media&token=b7686025-4a70-4e0f-83e1-b77d321c95f2" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FSPORTS-CLUB%2FSportsClub2019-20.pdf?alt=media&token=0c850a90-9c86-4f18-9a3a-f46bdd8dbc5f" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FSPORTS-CLUB%2FSportsClub2018-19.pdf?alt=media&token=0058c13b-2f56-437d-8acc-b97748d51b77" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -339,23 +339,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCULT-BOARD%2FCulturalMusicClub2022-23.pdf?alt=media&token=e2dd88d0-5289-49a7-b9a0-08d27a288e52" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCULT-BOARD%2FCulturalMusicClub2021-22.pdf?alt=media&token=1155c552-6d2d-45d7-9ccf-5821f51ca1bd" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCULT-BOARD%2FCulturalMusicClub2020-21.pdf?alt=media&token=4e327bfd-ada9-4830-824c-042f4f1a7723" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCULT-BOARD%2FCulturalMusicClub2019-20.pdf?alt=media&token=aadb71a0-31d1-4498-80c5-d04ed82a549a" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCULT-BOARD%2FCulturalMusicClub2018-19.pdf?alt=media&token=429b253b-f432-4db4-a9ba-7ceebd69c632" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -407,24 +407,17 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FISDF%2FInfoSecDigiForensicClub2022-23.pdf?alt=media&token=d5c739d8-e796-42a2-b035-4f99653b431e" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FISDF%2FInfoSecDigiForensicClub2021-22.pdf?alt=media&token=10fef913-e7f9-436d-b87c-1b83f8755b69" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FISDF%2FInfoSecDigiForensicClub2020-21.pdf?alt=media&token=e5050d34-698b-4149-a5cb-8c0cabbae3b4" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
-                    </div>
+                  
 
                 </div>
             </div>
